<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:id="@+id/main_container"
android:background="@drawable/ic_background"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_gravity="center"
android:gravity="center"
android:orientation="horizontal"
android:weightSum="1">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="1">

                <RelativeLayout
                    android:id="@+id/rules_layout"

                    android:layout_width="120dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center">

                    <ImageView

                        style="@style/main_menu_image_style"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerHorizontal="true"
                        app:srcCompat="@drawable/ic_rules" />
                </RelativeLayout>

                <TextView

                    style="@style/main_text_style"
                    android:layout_gravity="center|top"
                    android:gravity="bottom|center"
                    android:text="@string/rule" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/separator" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:background="@drawable/frame" />

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="1">

                <RelativeLayout
                    android:id="@+id/test_layout"

                    android:layout_width="120dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:clickable="true">

                    <ImageView

                        style="@style/main_menu_image_style"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerHorizontal="true"
                        app:srcCompat="@drawable/ic_test" />
                </RelativeLayout>

                <TextView

                    style="@style/main_text_style"
                    android:layout_gravity="center|top"
                    android:gravity="bottom|center"
                    android:text="@string/tests" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/separator" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="1">

                <RelativeLayout
                    android:id="@+id/layout"
                    android:layout_width="120dp"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <ImageView
                        style="@style/main_menu_image_style"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        app:srcCompat="@drawable/ic_exam" />
                </RelativeLayout>

                <TextView

                    style="@style/main_text_style"
                    android:layout_gravity="center|top"
                    android:gravity="bottom|center"
                    android:text="@string/exams" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/separator" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:background="@drawable/frame" />

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="1">

                <RelativeLayout
                    android:id="@+id/fines_layout"
                    android:layout_width="120dp"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <ImageView
                        style="@style/main_menu_image_style"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerHorizontal="true"
                        app:srcCompat="@drawable/ic_fines" />
                </RelativeLayout>

                <TextView

                    style="@style/main_text_style"
                    android:layout_gravity="center|top"
                    android:gravity="bottom|center"
                    android:text="@string/fines" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/separator" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="1">

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="1">

                <RelativeLayout
                    android:id="@+id/check_layout"

                    android:layout_width="120dp"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <ImageView
                        style="@style/main_menu_image_style"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerHorizontal="true"
                        app:srcCompat="@drawable/ic_check" />
                </RelativeLayout>

                <TextView

                    style="@style/main_text_style"
                    android:layout_gravity="center|top"
                    android:gravity="bottom|center"
                    android:text="@string/carcheck_desc" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/separator" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>